src/api/dcps/gapi/include/gapi.h

typedef gapi_handle gapi_object;
/*
 * typedef HANDLE_TYPE_NATIVE InstanceHandle_t;
 */
typedef GAPI_HANDLE_TYPE_NATIVE gapi_instanceHandle_t;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef gapi_unsigned_long gapi_statusMask;
typedef gapi_object gapi_entity;
/*
 * interface StatusCondition : Condition {
 */
typedef gapi_object gapi_statusCondition;
/*
 * interface Entity {
 */

/*
 * // Abstract methods
 *
 * //  ReturnCode_t
 * //  set_qos(
 * //      in EntityQos qos);
 * //
 * //  void
 * //  get_qos(
 * //      inout EntityQos qos);
 * //
 * //  ReturnCode_t
 * //  set_listener(
 * //      in Listener l,
 * //      in StatusKindMask mask);
 * //
 * //  Listener
 * //  get_listener();
 */

/*
 *     ReturnCode_t
 *     enable();
 */
OS_API gapi_returnCode_t
gapi_entity_enable (
    gapi_entity _this);
/*
 *     StatusCondition
 *     get_statuscondition();
 */
OS_API gapi_statusCondition
gapi_entity_get_statuscondition (
    gapi_entity _this);
/*
 *     StatusKindMask
 *     get_status_changes();
 */
OS_API gapi_statusMask
gapi_entity_get_status_changes (
    gapi_entity _this);
/*
 *     InstanceHandle_t
 *     get_instance_handle();
 */
OS_API gapi_instanceHandle_t
gapi_entity_get_instance_handle (
    gapi_entity _this);
OS_API typedef void (*gapi_delete_action)(void *userData, void *arg);
OS_API void
gapi_object_set_user_data (
    gapi_object _this,
    void *userData,
    gapi_delete_action deleteAction,
    void *deleteActionArg);
OS_API void *
gapi_object_get_user_data (
    gapi_object _this);